fix(crm client): menu toggle; background corner was visible on hover; set to transparent to fix

--- a/apps/crm/client/src/features/sidebar/components/_MenuToggle.module.scss
+++ b/apps/crm/client/src/features/sidebar/components/_MenuToggle.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   padding: 8px;
-  background-color: var(--thm-background-default);
+  background-color: transparent;
   transition: anim.$theme-transition-background, anim.$icon-hover-vertical-transition;
 
   &:hover {
